@@ -1,6 +1,6 @@
 package com.atxca.Util.Token;
 
-import sun.misc.BASE64Encoder;
+import org.apache.commons.codec.binary.Base64;
 
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
@@ -35,8 +35,9 @@ public class TokenProccessor {
         try {
             MessageDigest md = MessageDigest.getInstance("md5");
             byte md5[] = md.digest(token.getBytes());
-            BASE64Encoder encoder = new BASE64Encoder();
-            return encoder.encode(md5);
+            //BASE64Encoder encoder = new BASE64Encoder();
+            //return encoder.encode(md5);
+            return Base64.encodeBase64String(md5);
         } catch (NoSuchAlgorithmException e) {
             // TODO Auto-generated catch block
             e.printStackTrace();
